log/build_2021-04-21_15-43-22/pickplace/stderr.log
  File "/home/gy/Omron_TM_ROS2/install/pickplace/lib/python3.8/site-packages/pickplace/teach_setup.py", line 9
    /home/gy/Omron_TM_ROS2/install/pickplace/share/pickplace/pickplace/pp_library
    ^
SyntaxError: invalid syntax

